--- a/src/style/scss/form.scss
+++ b/src/style/scss/form.scss
@@ -1,4 +1,5 @@
 @import 'form-field';
+
 .form {
   display: flex;
   flex-direction: column;
@@ -31,4 +32,7 @@
     font-size: 1.3rem;
   }
 
+  button[type='submit'] {
+    margin: auto auto 0 auto;
+  }
 }
