--- a/src/style/scss/login.scss
+++ b/src/style/scss/login.scss
@@ -1,4 +1,4 @@
 body {
-  background: url('/assets/image/background.jpg');
+  background: url('../../assets/image/background.jpg');
   background-size: cover;
 }
