--- a/src/style/scss/main.scss
+++ b/src/style/scss/main.scss
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'iransans';
-  src: url('/assets/font/iransans.ttf');
+  src: url('../../assets/font/iransans.ttf');
 }
 
 html,
