--- a/src/style/scss/landing.scss
+++ b/src/style/scss/landing.scss
@@ -51,3 +51,29 @@ html {
         font-size: 2rem;
     }
 }
+@media only screen and (max-width:549px) {
+    .main{
+        &__slogan:not(h3){
+            padding-top: 10px;
+            font-size: 3rem;
+            font-weight: bolder;
+        }
+        &__slogan:not(h1){
+            font-size: 2rem;
+        }
+    }
+    
+}
+@media only screen and (max-width:360px) {
+    .main{
+        &__slogan:not(h3){
+            padding-top: 10px;
+            font-size: 2.5rem;
+            font-weight: bolder;
+        }
+        &__slogan:not(h1){
+            font-size: 1.5rem;
+        }
+    }
+    
+}
