redesign landing page

--- a/src/style/scss/_var.scss
+++ b/src/style/scss/_var.scss
@@ -1,11 +1,9 @@
+$color-primary: #2395ff;
+
 $color-green: #43a047;
 $color-red: #c62828;
 
-$color-text-gray: #000000;
-$color_light_blue:#eefffd;
-$color_medium_yellow:#fdff6f;
-$color_light_pink:#FFEEF0;
-$color_medium_blue:#80e1ff;
+$color-text: #444;
 
 $media_medium:700px;
 $navbar_height:100px;
