--- a/src/style/scss/button.scss
+++ b/src/style/scss/button.scss
@@ -5,23 +5,24 @@
 
   border-radius: 0.5rem;
   color: #fff;
-  background-color: $color-green;
+  background-color: $color-primary;
   transition: all 0.3s ease;
 
   font-family: inherit;
+  text-align: center;
+  text-decoration: none;
   outline: none;
   border: none;
   cursor: pointer;
-
+  
   &:hover {
     border-radius: 1.5rem;
   }
-
+  
   &--inline {
-    margin-left: auto;
     margin-bottom: 0.5rem;
   
-    color: $color-green;
+    color: $color-primary;
     text-shadow: 0px 0px 0px #000000a1;
     text-decoration: none;
     font-size: 1.3rem;
@@ -43,6 +44,19 @@
       &::after{
         transform: scaleX(1);
       }
+    }
+  }
+
+  &--outline {
+    @extend .button;
+
+    color: $color-primary;
+    background-color: transparent;
+    border: 1px solid $color-primary;
+    
+    &:hover {
+      color: #fff;
+      background-color: $color-primary;
     }
   }
 }
