create html of song page

--- a/src/style/scss/_var.scss
+++ b/src/style/scss/_var.scss
@@ -4,6 +4,7 @@ $color-green: #43a047;
 $color-red: #c62828;
 
 $color-text: #444;
+$color-grey-light: #f6f6f6;
 
 $media_medium:700px;
 $navbar_height:100px;
