--- a/src/style/scss/components/button.scss
+++ b/src/style/scss/components/button.scss
@@ -1,4 +1,4 @@
-@import 'var';
+@import '../util/var';
 
 .button {
   padding: 0.5rem 2.5rem;
@@ -14,20 +14,20 @@
   outline: none;
   border: none;
   cursor: pointer;
-  
+
   &:hover {
     border-radius: 1.5rem;
   }
-  
+
   &--inline {
     margin-bottom: 0.5rem;
-  
+
     color: $color-primary;
     text-shadow: 0px 0px 0px #000000a1;
     text-decoration: none;
     font-size: 1.3rem;
 
-    &::after{
+    &::after {
       content: '';
 
       display: block;
@@ -40,8 +40,8 @@
       background-color: currentColor;
     }
 
-    &:hover{
-      &::after{
+    &:hover {
+      &::after {
         transform: scaleX(1);
       }
     }
@@ -53,7 +53,7 @@
     color: $color-primary;
     background-color: transparent;
     border: 1px solid $color-primary;
-    
+
     &:hover {
       color: #fff;
       background-color: $color-primary;
