--- a/src/style/scss/components/header.scss
+++ b/src/style/scss/components/header.scss
@@ -1,4 +1,4 @@
-@import 'var';
+@import '../util/var';
 
 .header {
   display: grid;
@@ -12,7 +12,7 @@
   &__background {
     display: block;
 
-    background: url('../../assets/image/header.jpg');
+    background: url('../../../assets/image/header.jpg');
     background-position: top right;
     background-size: contain;
     background-repeat: no-repeat;
