--- a/src/style/scss/util/_var.scss
+++ b/src/style/scss/util/_var.scss
@@ -4,5 +4,6 @@ $color-green: #43a047;
 $color-red: #c62828;
 
 $color-text: #444;
-$color-grey-light: #f6f6f6;
+$background-color: #eee;
 
+$round-section-margin: 3rem;
