--- a/src/style/scss/components/footer.scss
+++ b/src/style/scss/components/footer.scss
@@ -1,4 +1,5 @@
 @import '../util/var';
+@import '../util/mixins';
 
 .footer {
   display: flex;
@@ -6,7 +7,7 @@
   align-items: center;
   justify-content: space-between;
 
-  background-color: $color-text;
+  @include round-section($background-color: $color-text);
 
   &__link {
     display: flex;
@@ -15,7 +16,9 @@
 
     a {
       margin-bottom: 1rem;
+
       color: #fff;
+      font-size: 1.7rem;
       text-align: center;
       transition: all 0.2s ease;
 
