--- a/src/style/scss/main.scss
+++ b/src/style/scss/main.scss
@@ -13,12 +13,6 @@
   src: url('../../assets/font/iransans.ttf');
 }
 
-html,
-body {
-  height: 100%;
-  min-height: 100%;
-}
-
 html {
   font-size: 62.5%;
   font-family: 'iransans', sans-serif;
@@ -26,4 +20,5 @@ html {
 
 body {
   color: $color-text;
+  background-color: $background-color;
 }
