--- a/src/style/scss/util/_var.scss
+++ b/src/style/scss/util/_var.scss
@@ -2,6 +2,7 @@ $color-primary: #2395ff;
 
 $color-green: #43a047;
 $color-red: #c62828;
+$color-tomato-red:#df3a40;
 
 $color-text: #444;
 $background-color: #eee;
