--- a/src/style/scss/components/button.scss
+++ b/src/style/scss/components/button.scss
@@ -1,11 +1,11 @@
-@import '../util/var';
+@use '../util/var';
 
 .button {
   padding: 0.5rem 2.5rem;
 
   border-radius: 0.5rem;
   color: #fff;
-  background-color: $color-primary;
+  background-color: var.$color-primary;
   transition: all 0.3s ease;
 
   font-family: inherit;
@@ -22,7 +22,7 @@
   &--inline {
     margin-bottom: 0.5rem;
 
-    color: $color-primary;
+    color: var.$color-primary;
     text-shadow: 0px 0px 0px #000000a1;
     text-decoration: none;
     font-size: 1.3rem;
@@ -50,13 +50,13 @@
   &--outline {
     @extend .button;
 
-    color: $color-primary;
+    color: var.$color-primary;
     background-color: transparent;
-    border: 1px solid $color-primary;
+    border: 1px solid var.$color-primary;
 
     &:hover {
       color: #fff;
-      background-color: $color-primary;
+      background-color: var.$color-primary;
     }
   }
 }
