--- a/src/style/scss/main.scss
+++ b/src/style/scss/main.scss
@@ -1,4 +1,4 @@
-@import 'util/var';
+@use 'util/var';
 
 *,
 *::before,
@@ -14,11 +14,11 @@
 }
 
 html {
-  font-size: 62.5%;
   font-family: 'iransans', sans-serif;
+  font-size: 62.5%;
 }
 
 body {
-  color: $color-text;
-  background-color: $background-color;
+  color: var.$color-text;
+  background-color: var.$background-color;
 }
