--- a/src/style/scss/components/header.scss
+++ b/src/style/scss/components/header.scss
@@ -1,12 +1,24 @@
 @use '../util/var';
 @use '../util/mixins';
+@use '../util/media';
 
 .header {
   display: grid;
+  padding-bottom: 2rem;
   min-height: calc(100vh - #{2 * var.$round-section-margin});
   grid-template-columns: minmax(600px, 1fr) 1fr;
 
   @include mixins.round-section();
+
+  @include media.query(laptop) {
+    grid-template-columns: minmax(400px, 1fr) 1fr;
+  }
+
+  @include media.query(tablet) {
+    min-height: calc(100vh - #{var.$round-section-margin});
+    grid-template-columns: 1fr;
+    grid-template-rows: 6fr 5fr;
+  }
 
   > .nav {
     position: absolute;
@@ -20,6 +32,15 @@
     background-position: center right, top right;
     background-size: contain, 100% 80%;
     background-repeat: no-repeat;
+
+    @include media.query(laptop) {
+      background-size: contain, 100% 70%;
+    }
+
+    @include media.query(tablet) {
+      background-position: center, top right;
+      background-size: contain, 80% 70%;
+    }
   }
 
   &__title {
@@ -28,12 +49,21 @@
     justify-content: center;
     align-items: center;
 
+    @include media.query(laptop) {
+      font-size: 0.8rem;
+    }
+
+    @include media.query(phone) {
+      font-size: 0.6rem;
+    }
+
     h1 {
       color: var.$color-text;
+      font-size: 7em;
     }
 
     h2 {
-      font-size: 4rem;
+      font-size: 4em;
     }
 
     p {
@@ -52,6 +82,6 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
 
-    font-size: 2rem;
+    font-size: 2em;
   }
 }
