--- a/src/style/scss/util/_media.scss
+++ b/src/style/scss/util/_media.scss
@@ -15,5 +15,9 @@
     @media only screen and (min-width: 112.5em) {
       @content;
     }
+  } @else {
+    @media only screen and (max-width: $device) {
+      @content;
+    }
   }
 }
