--- a/src/style/scss/form.scss
+++ b/src/style/scss/form.scss
@@ -2,10 +2,14 @@
 
 body {
   background: url('../../assets/image/background.jpg');
+  background-position: right;
   background-size: cover;
 }
 
+html,
+body,
 main {
+  height: 100%;
   min-height: 100%;
 }
 
@@ -39,6 +43,10 @@ main {
     margin: 0.5rem;
     text-align: center;
     font-size: 1.3rem;
+  }
+
+  .button--inline {
+    margin-left: auto;
   }
 
   button[type='submit'] {
