--- a/src/style/scss/components/button.scss
+++ b/src/style/scss/components/button.scss
@@ -1,5 +1,14 @@
 @use '../util/var';
 
+%button--base {
+  font-family: inherit;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
 .button {
   padding: 0.5rem 2.5rem;
 
@@ -8,25 +17,26 @@
   background-color: var.$color-primary;
   transition: all 0.3s ease;
 
-  font-family: inherit;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  border: none;
-  cursor: pointer;
+  @extend %button--base;
 
-  &:hover {
+  &:hover,
+  &:focus {
     border-radius: 1.5rem;
+  }
+
+  &:active {
+    transform: scale(0.9);
   }
 
   &--inline {
     margin-bottom: 0.5rem;
 
     color: var.$color-primary;
-    text-decoration: none;
     font-size: 1.3rem;
 
     transition: 0.3s all ease;
+
+    @extend %button--base;
 
     &::after {
       content: '';
@@ -41,7 +51,8 @@
       background-color: var.$color-primary;
     }
 
-    &:hover {
+    &:hover,
+    &:focus {
       &::after {
         transform: scaleX(1);
       }
@@ -55,7 +66,8 @@
     background-color: transparent;
     border: 1px solid var.$color-primary;
 
-    &:hover {
+    &:hover,
+    &:focus {
       color: #fff;
       background-color: var.$color-primary;
     }
