--- a/src/style/scss/components/_form-field.scss
+++ b/src/style/scss/components/_form-field.scss
@@ -126,3 +126,17 @@ $font-size-small: 1.2rem;
     }
   }
 }
+
+input {
+  &:-webkit-autofill {
+    -webkit-background-clip: text;
+    background-clip: text;
+    filter: none;
+  }
+
+  &:autofill {
+    -webkit-background-clip: text;
+    background-clip: text;
+    filter: none;
+  }
+}
