add audio player controller

--- a/src/style/scss/util/_var.scss
+++ b/src/style/scss/util/_var.scss
@@ -6,5 +6,6 @@ $color-tomato-red:#df3a40;
 
 $color-text: #444;
 $background-color: #eee;
+$background-color-audio:#3ADFD9;
 
 $round-section-margin: 3rem;
