--- a/src/style/scss/components/audio.scss
+++ b/src/style/scss/components/audio.scss
@@ -19,6 +19,9 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        @media only screen and (max-width:800px) {
+            justify-content: center;
+        }
     }
     &__volume{
         width: 20%;
@@ -27,6 +30,9 @@
         flex-direction: row-reverse;
         justify-content: center;
         align-items: center;
+        @media only screen and (max-width:800px) {
+            display: none;
+        }
         & > button{
             width: 1.2rem;
             height: 1.2rem;
@@ -137,6 +143,9 @@
         }
     }
     &__info{
+        @media only screen and (max-width:800px) {
+            display: none;
+        }
         width: 20%;
         display: flex;
         flex-direction: row-reverse;
@@ -176,6 +185,12 @@
         justify-content: space-between;
         align-items: center;
         cursor: pointer;
+        @media only screen and (max-width:800px) {
+            width: 60%;
+        }
+        @media only screen and (max-width:500px) {
+            width: 80%;
+        }
         &::after , &::before{
             content: "0:0";
             font-size: 2rem;
