--- a/src/style/scss/components/button.scss
+++ b/src/style/scss/components/button.scss
@@ -72,4 +72,43 @@
       background-color: var.$color-primary;
     }
   }
+
+  &--icon {
+    @extend %button--base;
+
+    display: flex;
+    padding: 0.8rem;
+    max-width: 3.7rem;
+
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 50%;
+    background-color: var.$color-tomato-red;
+    transition: all 1s ease;
+
+    &::after {
+      content: attr(data-label);
+
+      color: #fefefe;
+      overflow: hidden;
+      white-space: nowrap;
+      transition: all 0.6s ease;
+    }
+
+    &:hover {
+      max-width: 20rem;
+      border-radius: 1rem;
+    }
+
+    & > svg {
+      display: block;
+      margin: 0 1rem;
+      width: 1.7rem;
+      height: 1.7rem;
+      flex: 0 0 1.7rem;
+
+      fill: #fefefe !important;
+    }
+  }
 }
